src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

p,
h2,
ul {
  font-size: 30px;
  font-family: "Jersey 15";
}

.title-text,
.navbar-link {
  font-family: "Micro 5";
}

.toggle {
  position: absolute;
  margin: 132px 0 0 212px;
}

.container {
  display: flex;
  justify-content: center;
  all: unset;
  width: 100%;
}

ul {
  display: flex;
  justify-content: space-evenly;
}

